agregado de imagen

--- a/verduras.html
+++ b/verduras.html
@@ -16,6 +16,10 @@
 
     <p>Las verduras son hortalizas cuyo color predominante es el verde.​ Sin embargo, el uso popular suele extender su significado a otras partes comestibles de las plantas, como hojas, inflorescencias y tallos.​</p>
 
-    
+    <img src="https://images.ecestaticos.com/-lvjpJLJluki4Zj7bXKJWC9Tiso=/130x25:676x434/1200x898/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2Fb25%2F568%2Fb4f%2Fb25568b4fdd2ab303a931ae702ebf800.jpg" alt="">
+
+
+
+
 </body>
 </html>
